--- a/.github/workflows/deployDoraMetricsJob.yml
+++ b/.github/workflows/deployDoraMetricsJob.yml
@@ -3,6 +3,9 @@ name: Deploy DORA Metrics Job
 on:
   schedule:
     - cron: '0 7-17 * * *'
+  push:
+    branches:
+      - main
   workflow_dispatch:
 
 jobs:
