More efficient unique check, rename to job.ts

--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "dora",
   "version": "1.0.0",
-  "main": "app.ts",
+  "main": "job.ts",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "tests/testJob.ts"
   },
   "author": "",
   "license": "ISC",
