Kall jira-proxy

--- a/.nais/dora-naisjob.yml
+++ b/.nais/dora-naisjob.yml
@@ -20,3 +20,11 @@ spec:
       destinations:
         - id: elastic
         - id: loki
+  azure:
+    application:
+      enabled: true
+  accessPolicy:
+    outbound:
+      rules:
+        - application: jira-proxy
+          cluster: prod-fss
