--- a/.nais/dora-naisjob.yml
+++ b/.nais/dora-naisjob.yml
@@ -27,4 +27,5 @@ spec:
     outbound:
       rules:
         - application: jira-proxy
+          namespace: pesys-felles
           cluster: prod-fss
